[package]
name = "rproxy"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/wangyifan349/rproxy"
description = "A small Rust proxy server supporting HTTP, HTTPS CONNECT, SOCKS5 TCP, and SOCKS5 UDP."
readme = "README.md"

[dependencies]
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
socket2 = { version = "0.6.4", features = ["all"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false
